2005-04-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Convert to using GRand rather than rand. Remove some
	necessary includes (and convert some from "" -> <>). Inspired by
	bug #172376 from Marco Colombo.

	* glines.c:
	* glines.h: Move non-externed variable declarations out of the
	header.

	* glines.c: Evil code to rearrange the main layout table when the
	game size changes so that the preview doesn't get too big.

2005-03-31  Richard Hoelscher  <rah@rahga.com>

	* glines.c (fullscreen_callback): Leave setting of the fullscreen
	actions visibility to the callback that handles window state events.

2005-03-30  Richard Hoelscher  <rah@rahga.com>

	* glines.c: Use games-stock in menu items.
	(main): Call games-stock-init().
	(set_fullscreen_actions): New, seperate Fullscreen/Leave items.

2005-03-24  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* glines.c:  Use Header capitalization for category titles.
 	
2005-03-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Fullscreen patch from Marco Colombo.

2005-03-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.h: 
	* glines.schemas.in:
	* glines.c (DEFAULT_GAME_SIZE): 	
	* Makefile.am: Make Medium the same as the old version and also
	make it the default. Make small, meaner and nastier. Also add a
	schema for the size parameter.

2005-03-23  Richard Hoelscher  <rah@rahga.com>

	* Makefile.am: support multiple scorefiles
	* glines.c: Marco's patch for high-score-support

	* glines.h:
	* glines.c: Marco Colombo's patch for configurable playfield
	size has been applied. Many macros have been replaced by variables,
	look for hfieldsize, vfieldsize, ncolors, npieces, and several more.
	(refresh_preview_pixmaps): Creates a blank pixmap for use in preview.
	(draw_preview): Now handles up to MAXNPIECES preview pixmaps.
	(route)(find_lines): Bulk of  macro replacement took place here.
	(set_sizes)(size_callback): New. Handle setting size from prefs.